[project]
name = "bpod-python-overhaul"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = ['bpod-core', 'bpod-gui','bpod-rig']

[tool.uv.sources]
bpod-core = {workspace=true}
bpod-gui = {workspace=true}
bpod-rig = {workspace=true}

[tool.uv.workspace]
members=["./bpod-core", "./bpod-rig", "./bpod-gui"]

[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"